# libonenote

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
crates/onenote-cli/: Cargo.toml
crates/onenote-cli/src/: main.rs
docs/: architecture.md
src/: error.rs  graph.rs  lib.rs  loader.rs  model.rs  native.rs
src/native/: package.rs
