[package]
name = "onenote-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Command-line tools for libonenote"
license = "MIT"
repository = "https://github.com/PatrykFlama/libonenote"

[[bin]]
name = "onenote"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libonenote = { path = "../.." }
sanitize-filename = "0.6"
